[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/HyperspaceBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Pause_Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 1 )

[node name="Pause_Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -150.0
margin_right = 88.0
margin_bottom = -117.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"

[node name="Restart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -20.0
margin_right = 60.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 50.0
margin_right = 60.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -90.0
margin_right = 60.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 4 )
text = "Continue"

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
